--- a/client/components/oauth-buttons/oauth-buttons.html
+++ b/client/components/oauth-buttons/oauth-buttons.html
@@ -1,9 +1,9 @@
 <a ng-class="classes" ng-click="OauthButtons.loginOauth('facebook')" class="btn btn-social btn-facebook">
   <i class="fa fa-facebook"></i>
-  Connecter avec Facebook
+  Connect with Facebook
 </a>
 <a ng-class="classes" ng-click="OauthButtons.loginOauth('google')" class="btn btn-social btn-google">
   <i class="fa fa-google-plus"></i>
-  Connecter avec Google+
+  Connect with Google+
 </a>
 
