Inscription d'un club + CSS

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -46,6 +46,8 @@
 /* inject:css */
 @import 'admin/admin.css';
 @import 'main/main.css';
+@import 'account/signup/signup.css';
+@import '../components/navbar/navbar.css';
 @import '../components/footer/footer.css';
 @import '../components/modal/modal.css';
 @import '../components/oauth-buttons/oauth-buttons.css';
