fb+google + définir mdp +

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -44,6 +44,7 @@
 
 /* Component styles are injected through gulp */
 /* inject:css */
+@import 'account/finalize/finalize.css';
 @import 'account/signup/signup.css';
 @import 'admin/admin.css';
 @import 'main/main.css';
