--- a/client/app/app.css
+++ b/client/app/app.css
@@ -48,6 +48,7 @@
 @import 'account/signup/signup.css';
 @import 'admin/admin.css';
 @import 'main/main.css';
+@import 'members-list/members-list.css';
 @import '../components/footer/footer.css';
 @import '../components/modal/modal.css';
 @import '../components/navbar/navbar.css';
