début achat/vente valeur avec recherche valeur sur Yahoo Finance

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -47,6 +47,7 @@
 @import 'account/finalize/finalize.css';
 @import 'account/signup/signup.css';
 @import 'admin/admin.css';
+@import 'buysell/buysell.css';
 @import 'main/main.css';
 @import 'members-list/members-list.css';
 @import '../components/footer/footer.css';
