--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -15,7 +15,7 @@
             <a ui-sref="{{item.state}}">{{item.title}}</a>
         </li>
         <li ng-show="$ctrl.isLoggedIn() && $ctrl.getCurrentUser().club.length + ($ctrl.getCurrentUser().individualAccount ? 1 : 0) > 1" class="dropdown active" uib-dropdown>
-          <a class="dropdown-toggle" uib-dropdown-toggle data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          <a class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">
             Compte : {{ accountSelected.type == 'club' ? 'Club ' + accountSelected.clubName : 'Individuel' }} <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
@@ -30,12 +30,20 @@
             <p class="navbar-text">Compte : {{ accountSelected.type == 'club' ? 'Club ' + accountSelected.clubName : 'Individuel' }}</p>
         </li>
         <li ng-show="$ctrl.isLoggedIn() && accountSelected.type == 'club'" class="dropdown" uib-dropdown>
-          <a class="dropdown-toggle" uib-dropdown-toggle data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;&nbsp;Gestion des membres <span class="caret"></span>
+          <a class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">
+            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;&nbsp;Club <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
             <li><a ui-sref="members-list">Liste des membres</a></li>
             <li><a ui-sref="member-exit">Départ d'un membre</a></li>
+          </ul>
+        </li>
+        <li ng-show="$ctrl.isLoggedIn() && accountSelected.type == 'club'" class="dropdown" uib-dropdown>
+          <a class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">
+            <span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span>&nbsp;&nbsp;Portefeuille <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a ui-sref="buysell">Achat / Vente valeur</a></li>
           </ul>
         </li>
         <li ng-show="$ctrl.isAdmin()" ui-sref-active="active"><a ui-sref="admin">Admin</a></li>
