page wallet terminée

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -43,6 +43,7 @@
             <span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span>&nbsp;&nbsp;Portefeuille <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
+            <li><a ui-sref="wallet">Portefeuille</a></li>
             <li><a ui-sref="buysell">Achat / Vente valeur</a></li>
           </ul>
         </li>
