--- a/client/app/app.css
+++ b/client/app/app.css
@@ -48,6 +48,7 @@
 @import 'account/signup/signup.css';
 @import 'admin/admin.css';
 @import 'buysell/buysell.css';
+@import 'wallet/wallet.css';
 @import 'main/main.css';
 @import 'members-list/members-list.css';
 @import '../components/footer/footer.css';
@@ -55,3 +56,10 @@
 @import '../components/navbar/navbar.css';
 @import '../components/oauth-buttons/oauth-buttons.css';
 /* endinject */
+
+
+
+.no-side-padding {
+  padding-left: 0px;
+  padding-right: 0px;
+}
