--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -36,6 +36,8 @@
           <ul class="dropdown-menu" role="menu">
             <li><a ui-sref="members-list">Liste des membres</a></li>
             <li><a ui-sref="member-exit">Départ d'un membre</a></li>
+            <li><a ui-sref="treasury">Trésorerie</a></li>
+            <li><a ui-sref="accountHistory">Historique du compte</a></li>
           </ul>
         </li>
         <li ng-show="$ctrl.isLoggedIn() && accountSelected.type == 'club'" class="dropdown" uib-dropdown>
