--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -38,6 +38,7 @@
             <li><a ui-sref="member-exit">Départ d'un membre</a></li>
             <li><a ui-sref="treasury">Trésorerie</a></li>
             <li><a ui-sref="accountHistory">Historique du compte</a></li>
+            <li><a ui-sref="graphProgress">Progression de la performance</a></li>
           </ul>
         </li>
         <li ng-show="$ctrl.isLoggedIn() && accountSelected.type == 'club'" class="dropdown" uib-dropdown>
