cache yahoo + service yahooRequest + graphique performance du club

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -49,6 +49,7 @@
 @import 'accountHistory/accountHistory.css';
 @import 'admin/admin.css';
 @import 'buysell/buysell.css';
+@import 'graphProgress/graphProgress.css';
 @import 'main/main.css';
 @import 'members-list/members-list.css';
 @import 'treasury/treasury.css';
