sélection compte reload + affichage portefeuille indiv part 1

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -41,7 +41,7 @@
             <li><a ui-sref="graphProgress">Progression de la performance</a></li>
           </ul>
         </li>
-        <li ng-show="$ctrl.isLoggedIn() && accountSelected.type == 'club'" class="dropdown" uib-dropdown>
+        <li ng-show="$ctrl.isLoggedIn()" class="dropdown" uib-dropdown>
           <a class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">
             <span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span>&nbsp;&nbsp;Portefeuille <span class="caret"></span>
           </a>
