--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand"><i class="fa fa-line-chart" aria-hidden="true"></i>&nbsp;curves</a>
+      <a href="/">
+        <!-- <i class="fa fa-line-chart" aria-hidden="true"></i>&nbsp;curves -->
+        <img src="/assets/images/curves-logo.png" style="height: 30px; margin-top: 10px; margin-right: 20px;" />
+      </a>
     </div>
     <div uib-collapse="$ctrl.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
