--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,8 +1,11 @@
-<div class="container">
-  <!-- <p>Angular Fullstack v4.1.1 |
+<div class="text-center" style="background-color: #0a3051; width: 100%">
+	<img src="/assets/images/footer.png" style="height: 40px" />
+</div>
+<!-- <div class="container">
+  <p>Angular Fullstack v4.1.1 |
     <a href="http://angular-fullstack.github.io/generator-angular-fullstack">Documentation</a> |
     <a href="https://gitter.im/DaftMonk/generator-angular-fullstack">Chat on Gitter</a> |
     <a href="https://github.com/angular-fullstack/generator-angular-fullstack/issues?state=open">Issues</a> |
     <a href="https://opencollective.com/angular-fullstack">Donate to our Open Collective</a>
-  </p> -->
-</div>
+  </p>
+</div> -->
