navabr suivi -> gestion

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -54,7 +54,7 @@
 
         <li ng-show="$ctrl.isLoggedIn()" class="dropdown" uib-dropdown>
           <a class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">
-            <span class="fa fa-bar-chart" aria-hidden="true"></span>&nbsp;&nbsp;Suivi <span class="caret"></span>
+            <span class="fa fa-bar-chart" aria-hidden="true"></span>&nbsp;&nbsp;Gestion <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
             <li><a ui-sref="treasury">Trésorerie</a></li>
