--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -57,6 +57,7 @@
             <span class="fa fa-bar-chart" aria-hidden="true"></span>&nbsp;&nbsp;Gestion <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
+            <li><a ui-sref="treasuryMove">Mouvement de trésorerie</a></li>
             <li><a ui-sref="treasury">Trésorerie</a></li>
             <li><a ui-sref="accountHistory">Historique du compte</a></li>
             <li><a ui-sref="graphProgress">Progression de la performance</a></li>
